feat: EXIF info, infinite screen, and more
